# music-player-state-automata-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: MusicPlayer.hpp  PausedState.cpp  PausedState.hpp  PlayingState.hpp  States.hpp  StoppedState.hpp
musicplayer/: CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.hpp  PausedState.cpp  PausedState.hpp  PlayingState.cpp  PlayingState.hpp  States.hpp  StoppedState.cpp
musicplayer-tests/: CMakeLists.txt  CMakeLists.txt.in
src/: MusicPlayer.cpp  PausedState.cpp  PlayingState.cpp  StoppedState.cpp
